v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__order_by__multiple_columns_user_1.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "Track",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "Tracks",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "order_by",
                                ),
                            ): Literal(
                                Array [
                                    Object {
                                        "AlbumId": String("Asc"),
                                    },
                                    Object {
                                        "TrackId": String("Desc"),
                                    },
                                ],
                            ),
                            ArgumentName(
                                Identifier(
                                    "where",
                                ),
                            ): Literal(
                                Object {
                                    "_or": Array [
                                        Object {
                                            "AlbumId": Object {
                                                "_eq": Number(1),
                                            },
                                        },
                                        Object {
                                            "AlbumId": Object {
                                                "_eq": Number(4),
                                            },
                                        },
                                    ],
                                },
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "Name",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "Name",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "TrackId",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "TrackId",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "AlbumId",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "AlbumId",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
