v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__order_by__nested_admin.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "asc",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "institutions",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "order_by",
                                ),
                            ): Literal(
                                Array [
                                    Object {
                                        "location": Array [
                                            Object {
                                                "city": String("Asc"),
                                            },
                                        ],
                                    },
                                ],
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "location",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "location",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "city",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "city",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "campuses",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "campuses",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            Alias(
                Identifier(
                    "desc",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "institutions",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "order_by",
                                ),
                            ): Literal(
                                Array [
                                    Object {
                                        "location": Array [
                                            Object {
                                                "city": String("Desc"),
                                            },
                                        ],
                                    },
                                ],
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "location",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "location",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "city",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "city",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "campuses",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "campuses",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
        },
    },
)
